--- a/InvenTree/order/templates/order/order_wizard/match_fields.html
+++ b/InvenTree/order/templates/order/order_wizard/match_fields.html
@@ -15,12 +15,17 @@
     </ul>
 </div>
 {% endif %}
+{% if duplicates and duplicates|length > 0 %}
+<div class='alert alert-danger alert-block' role='alert'>
+    {% trans "Duplicate selections found, see below. Fix them then retry submitting." %}
+</div>
+{% endif %}
 {% endblock form_alert %}
 
 {% block form_buttons_top %}
-    {% comment %} {% if wizard.steps.prev %}
+    {% if wizard.steps.prev %}
     <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="save btn btn-default">{% trans "Previous Step" %}</button>
-    {% endif %} {% endcomment %}
+    {% endif %}
     <button type="submit" class="save btn btn-default">{% trans "Submit Selections" %}</button>
 {% endblock form_buttons_top %}
 
@@ -29,7 +34,7 @@
         <tr>
             <th></th>
             <th>{% trans "File Fields" %}</th>
-            {% for col in columns %}
+            {% for col in form %}
             <th>
                 <div>
                     <input type='hidden' name='col_name_{{ forloop.counter0 }}' value='{{ col.name }}'/>
@@ -46,17 +51,22 @@
         <tr>
             <td></td>
             <td>{% trans "Match Fields" %}</td>
-            {% for col in columns %}
+            {% for col in form %}
             <td>
-                <select class='select' id='id_col_{{ forloop.counter0 }}' name='col_guess_{{ forloop.counter0 }}'>
+                {{ col }}
+                {% comment %} <select class='select' id='id_col_{{ forloop.counter0 }}' name='col_guess_{{ forloop.counter0 }}'>
                         <option value=''>---------</option>
                         {% for req in headers %}
                         <option value='{{ req }}'{% if req == col.guess %}selected='selected'{% endif %}>{{ req }}</option>
                         {% endfor %}
-                </select>
-                {% if col.duplicate %}
-                <p class='help-inline'>{% trans "Duplicate column selection" %}</p>
-                {% endif %}
+                </select> {% endcomment %}
+                {% for duplicate in duplicates %}
+                    {% if duplicate == col.name %}
+                    <div class='alert alert-danger alert-block text-center' role='alert' style='padding:2px; margin-top:6px; margin-bottom:2px'>
+                        <b>{% trans "Duplicate selection" %}</b>
+                    </div>
+                    {% endif %}
+                {% endfor %}
             </td>
             {% endfor %}
         </tr>
