--- a/InvenTree/templates/modals.html
+++ b/InvenTree/templates/modals.html
@@ -25,6 +25,7 @@
               </div>
             </div>
             <div class='modal-footer'>
+                <div id='modal-footer-buttons'></div>
                 <button type='button' class='btn btn-default' id='modal-form-close' data-dismiss='modal'>{% trans "Close" %}</button>
                 <button type='button' class='btn btn-primary' id='modal-form-submit'>{% trans "Submit" %}</button>
             </div>
@@ -49,6 +50,7 @@
                   </div>
                 </div>
                 <div class='modal-footer'>
+                    <div id='modal-footer-buttons'></div>
                     <button type='button' class='btn btn-default' id='modal-form-close' data-dismiss='modal'>{% trans "Close" %}</button>
                     <button type='button' class='btn btn-primary' id='modal-form-submit'>{% trans "Submit" %}</button>
                 </div>
@@ -69,6 +71,7 @@
                 <div class='modal-form-content'>
                 </div>
                 <div class='modal-footer'>
+                    <div id='modal-footer-buttons'></div>
                     <button type='button' class='btn btn-default' id='modal-form-cancel' data-dismiss='modal'>{% trans "Cancel" %}</button>
                     <button type='button' class='btn btn-primary' id='modal-form-accept'>{% trans "Accept" %}</button>
                 </div>
@@ -90,6 +93,7 @@
               </div>
             </div>
             <div class='modal-footer'>
+                <div id='modal-footer-buttons'></div>
                 <button type='button' class='btn btn-default' data-dismiss='modal'>{% trans "Close" %}</button>
             </div>
         </div>
